[gd_scene load_steps=2 format=3 uid="uid://c8g7u5mg8p5qv"]

[ext_resource type="Script" uid="uid://b111qk758ji7g" path="res://main_menu.gd" id="1_mkn4r"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mkn4r")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.0
offset_top = -269.0
offset_right = 244.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = -5.0
offset_right = -11.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Welcome to the Game!"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="NameLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Enter your name:"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NameInput" type="LineEdit" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Player Name"
alignment = 1
max_length = 20

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ModeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Select Game Mode:"
horizontal_alignment = 1

[node name="Option1Button" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Arabic"

[node name="Option2Button" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Hebrew"

[node name="StartButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Start Game"
